# azbsmcts

./: .gitignore  README.md  REPRODUCIBILITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release-demo-model.yml  smoke.yml
demo/: package.json  pnpm-lock.yaml  vite.config.ts
demo/src/: App.vue
demo/src/assets/: main.css
demo/src/components/: GoBoard.vue  GoStone.vue  MoveInfoHistory.vue  ParticlesVisualizer.vue
demo/src/components/ui/dropdown-menu/: DropdownMenuCheckboxItem.vue  DropdownMenuLabel.vue
demo/src/lib/: game.ts  requests.ts  types.ts
demo/src/router/: index.ts
demo/src/views/: GameView.vue  HomeView.vue  NotFoundView.vue
reports/proposal/: main.tex  sample.bib
reports/thesis/: main.tex  sample.bib
src/: eval.py  main.py  openspiel.py  plot.py  train.py  tune.py
src/agents/: __init__.py  az_bsmcts.py  azbsmcts.py  azmcts.py  base.py  bsmcts.py
src/belief/: tree.py
src/belief/samplers/: base.py  particle.py
src/nets/: tiny_policy_value.py
src/scripts/: api.py  eval.py  plot.py  train.py  tune.py
src/scripts/common/: agent_factory.py  config.py  io.py  seeding.py
src/scripts/eval/: match.py  plot.py  sweep.py
src/scripts/train/: main.py  plot.py
src/scripts/tune/: main.py  plot.py
src/utils/: softmax.py  utils.py
tests/: __init__.py  test_eval_sweep_resume.py  test_game_length_tracking.py  test_hello.py  test_reproducibility.py  test_train_resume.py
tests/agents/: test_az_bsmcts.py
tests/belief/: __init__.py  test_particle_sampler.py  test_tree.py
